--- a/Makefile.direct
+++ b/Makefile.direct
@@ -83,6 +83,7 @@ AR= ar
 RANLIB= ranlib
 # For EMX, replace "ranlib" with "ar s".
 
+# All .o files of libgc.a except for dyn_load.o.
 OBJS= alloc.o reclaim.o allchblk.o misc.o mach_dep.o os_dep.o mark_rts.o \
   headers.o mark.o obj_map.o blacklst.o finalize.o new_hblk.o dbg_mlc.o  \
   malloc.o checksums.o pthread_support.o pthread_stop_world.o \
@@ -268,7 +269,7 @@ sunos5gc.so: $(OBJS) $(NODIST_OBJS) dyn_load_sunos53.o
 	ln $@ libgc.so
 
 # Alpha/OSF shared library version of the collector
-libalphagc.so: $(OBJS) $(NODIST_OBJS)
+libalphagc.so: $(OBJS) $(NODIST_OBJS) dyn_load.o
 	$(LD) -shared -o $@ $(OBJS) $(NODIST_OBJS) dyn_load.o -lc
 	ln $@ libgc.so
 
