Fix build using Makefile.direct on FreeBSD with system-defined CFLAGS (fix of commit f7cfa9d10)
Issue #483 (bdwgc).

Some hosts (e.g. FreeBSD ones) predefine CFLAGS variable (to e.g. -O2),
thus the options required to build libgc (e.g. -I) should be appended
to CFLAGS.

If there is a need to alter the default macros added to CFLAGS in
Makefile.direct, then the client should provide the full list of -D
options in CFLAGS_DEFAULT_MACROS variable.

* Makefile.direct (CFLAGS_FOR_PIC): Set to empty (if unset).
* Makefile.direct (CFLAGS_DEFAULT_MACROS): New variable (move all -D
options from CFLAGS) which could be customized by client.
* Makefile.direct (CFLAGS): Add comment; split assignment into two
steps (assign "-O" value first using "?=" operator, then append the
remaining options using "+=" operator); use CFLAGS_DEFAULT_MACROS.

--- a/Makefile.direct
+++ b/Makefile.direct
@@ -46,11 +46,22 @@ VPATH= $(srcdir)
 AO_SRC_DIR?= $(srcdir)/libatomic_ops
 
 CFLAGS_EXTRA?=
+
 # We need CFLAGS_FOR_PIC because we might be building a shared library.
-CFLAGS?= -O -I$(srcdir)/include -I$(AO_SRC_DIR)/src \
+CFLAGS_FOR_PIC?=
+
+# The default libgc configuration, OK to customize it by client.
+CFLAGS_DEFAULT_MACROS?= \
   -DALL_INTERIOR_POINTERS -DENABLE_DISCLAIM -DGC_ATOMIC_UNCOLLECTABLE \
   -DGC_GCJ_SUPPORT -DJAVA_FINALIZATION -DNO_EXECUTE_PERMISSION \
-  -DUSE_MMAP -DUSE_MUNMAP $(CFLAGS_FOR_PIC) $(CFLAGS_EXTRA)
+  -DUSE_MMAP -DUSE_MUNMAP
+
+# The client or host might provide the default optimizations flags (e.g. -O2).
+CFLAGS?= -O
+
+# Add the required options to CFLAGS like -I option.
+CFLAGS+= -I$(srcdir)/include -I$(AO_SRC_DIR)/src \
+  $(CFLAGS_DEFAULT_MACROS) $(CFLAGS_FOR_PIC) $(CFLAGS_EXTRA)
 
 # To build the collector with threads support, add to CFLAGS_EXTRA:
 # -DGC_THREADS -DPARALLEL_MARK -DTHREAD_LOCAL_ALLOC
