Build with GC_wcsdup support if wcslen exists
Now, digimars.mak, NT_MAKEFILE and WCC_MAKEFILE scripts pass
-D GC_REQUIRE_WCSDUP option to the compiler unconditionally to build
GC_wcsdup API function.  CMakeLists.txt and configure.ac pass this
option to the compiler after successful probing whether wcslen() is
provided on the host.  Makefile.direct does not pass the option by
default, only the comment about the option is added (because this
script cannot check availability of wcslen in libc).

* CMakeLists.txt (HAVE_WCSLEN): Set if wcslen symbol exists in wchar.h.
* Makefile.direct (CFLAGS_EXTRA): Add comment of -D GC_REQUIRE_WCSDUP.
* NT_MAKEFILE (CFLAGS_DEFAULT): Add -D GC_REQUIRE_WCSDUP.
* WCC_MAKEFILE (DEFS): Likewise.
* digimars.mak (DEFINES): Likewise.
* configure.ac (GC_REQUIRE_WCSDUP): Define if the code snippet
including wchar.h and calling wcslen() can be compiled and linked.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -494,6 +494,12 @@ if (NOT HAVE_SIGSETJMP)
   add_definitions("-DGC_NO_SIGSETJMP")
 endif()
 
+# Build with GC_wcsdup() support if possible.
+check_symbol_exists(wcslen wchar.h HAVE_WCSLEN)
+if (HAVE_WCSLEN)
+  add_definitions("-DGC_REQUIRE_WCSDUP")
+endif()
+
 # pthread_setname_np, if available, may have 1, 2 or 3 arguments.
 if (CMAKE_USE_PTHREADS_INIT)
   check_c_source_compiles("
