--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -78,7 +78,7 @@ environment:
     CONF_OPTIONS: --enable-cplusplus
     CFLAGS_EXTRA: -D GCTEST_PRINT_VERBOSE
   - TARGET: cygwin
-    CONF_OPTIONS: --enable-cplusplus --disable-munmap --enable-gc-assertions
+    CONF_OPTIONS: --enable-cplusplus --disable-munmap --enable-gc-assertions --enable-redirect-malloc
   - TARGET: cygwin64
     CFLAGS_EXTRA: -D GC_ALWAYS_MULTITHREADED -D LINT2 -D TEST_MANUAL_VDB
     CONF_OPTIONS: --enable-cplusplus --enable-gc-assertions --disable-shared
