Move platform-specific README files to doc/platforms
Issue #515 (bdwgc).

Make doc folder less overwhelming by moving platform specific docs to
their own folder.

* Makefile.am (dist_doc_DATA): Change doc/README.* to
doc/platforms/README.* for README.DGUX386, README.Mac, README.OS2,
README.aix, README.amiga, README.arm.cross, README.darwin,
README.emscripten, README.ews4800, README.hp, README.linux, README.sgi,
README.solaris2, README.symbian, README.uts, README.win32,
README.win64.
* README.md (General Description, Installation and Portability): Update
links to README.win32, README.win64 and README.* files.
* doc/debugging.md (Bus Errors and Segmentation Violations): Put
README.win32 in quotes (to match that in other .md files).
* doc/README.DGUX386: Move to doc/platforms folder.
* doc/README.Mac: Likewise.
* doc/README.OS2: Likewise.
* doc/README.aix: Likewise.
* doc/README.amiga: Likewise.
* doc/README.arm.cross: Likewise.
* doc/README.darwin: Likewise.
* doc/README.emscripten: Likewise.
* doc/README.ews4800: Likewise.
* doc/README.hp: Likewise.
* doc/README.linux: Likewise.
* doc/README.sgi: Likewise.
* doc/README.solaris2: Likewise.
* doc/README.symbian: Likewise.
* doc/README.uts: Likewise.
* doc/README.win32: Likewise.
* doc/README.win64: Likewise.
* doc/simple_example.md (Other platforms): Replace doc/README.xxx to
doc/platforms folder.

--- a/Makefile.am
+++ b/Makefile.am
@@ -216,28 +216,28 @@ dist_doc_DATA = \
     AUTHORS \
     LICENSE \
     README.md \
-    doc/README.DGUX386 \
-    doc/README.Mac \
-    doc/README.OS2 \
-    doc/README.aix \
-    doc/README.amiga \
-    doc/README.arm.cross \
+    doc/platforms/README.DGUX386 \
+    doc/platforms/README.Mac \
+    doc/platforms/README.OS2 \
+    doc/platforms/README.aix \
+    doc/platforms/README.amiga \
+    doc/platforms/README.arm.cross \
+    doc/platforms/README.darwin \
+    doc/platforms/README.emscripten \
+    doc/platforms/README.ews4800 \
+    doc/platforms/README.hp \
+    doc/platforms/README.linux \
+    doc/platforms/README.sgi \
+    doc/platforms/README.solaris2 \
+    doc/platforms/README.symbian \
+    doc/platforms/README.uts \
+    doc/platforms/README.win32 \
+    doc/platforms/README.win64 \
     doc/README.autoconf \
     doc/README.cmake \
     doc/README.cords \
-    doc/README.darwin \
-    doc/README.emscripten \
     doc/README.environment \
-    doc/README.ews4800 \
-    doc/README.hp \
-    doc/README.linux \
     doc/README.macros \
-    doc/README.sgi \
-    doc/README.solaris2 \
-    doc/README.symbian \
-    doc/README.uts \
-    doc/README.win32 \
-    doc/README.win64 \
     doc/debugging.md \
     doc/finalization.md \
     doc/gcdescr.md \
