Fix unset CXXFLAGS variable in Makefile.direct on AIX (fix of commit f7cfa9d10)
Issue #483 (bdwgc).

AIX Make seems not to recognize "?=" operator properly.

The proposed workaround to duplicate all flags of CFLAGS to CXXFLAGS
(appended to the user-supplied CXXFLAGS if any).

* Makefile.direct (CXXFLAGS): Set to empty value (using "?=");
append all flags of CFLAGS (i.e., expand CFLAGS manually).

--- a/Makefile.direct
+++ b/Makefile.direct
@@ -92,7 +92,13 @@ HOSTCFLAGS= $(CFLAGS)
 # Look into doc/README.macros for the description of the "define arguments"
 # influencing the collector configuration.
 
-CXXFLAGS?= $(CFLAGS)
+# Flags for the C++ files.
+# Note: non-GNU make might not recognize "?=" properly, so just duplicate
+# the flags of CFLAGS as a workaround.
+CXXFLAGS?=
+CXXFLAGS+= -I$(srcdir)/include -I$(AO_SRC_DIR)/src \
+  $(CFLAGS_DEFAULT_MACROS) $(CFLAGS_FOR_PIC) $(CFLAGS_EXTRA)
+
 AR= ar
 
 RANLIB= ranlib
