--- a/Makefile.am
+++ b/Makefile.am
@@ -240,7 +240,7 @@ dist_doc_DATA = \
     doc/README.environment \
     doc/README.macros \
     doc/debugging.md \
-    doc/faq.html \
+    doc/faq.md \
     doc/finalization.md \
     doc/gcdescr.md \
     doc/gcinterface.md \
